2017-05-29  Louis-Noel Pouchet  <pouchet@colostate.edu>
	Check-in the lastest version of PolyOpt, with patches.
	Enable new options:
	--polyopt-scop-pragmas-only: only process regions starting w/ #pragma scop
	--polyopt-scop-in-separate-file: put original and transformed scops in separate
	files.

	* AUTHORS,
	* ChangeLog,
	* INSTALL,
	* Makefile.am,
	* Makefile.in,
	* NEWS,
	* README,
	* README.txt,
	* aclocal.m4,
	* benchmarks/,
	* benchmarks/Makefile.am,
	* benchmarks/Makefile.in,
	* benchmarks/run.pl.in,
	* config/,
	* config/ax_boost.m4,
	* config/ax_boost_base.m4,
	* config/ax_pocc.m4,
	* config/compile,
	* config/config.guess,
	* config/config.sub,
	* config/depcomp,
	* config/install-sh,
	* config/libtool.m4,
	* config/ltmain.sh,
	* config/ltoptions.m4,
	* config/ltsugar.m4,
	* config/ltversion.m4,
	* config/lt~obsolete.m4,
	* config/missing,
	* config/test-driver,
	* config/texinfo.tex,
	* configure,
	* configure.ac,
	* doc/,
	* doc/Makefile.am,
	* doc/Makefile.in,
	* doc/htmldoc.tar.gz,
	* doc/polyopt.info,
	* doc/polyopt.pdf,
	* doc/polyopt.texi,
	* install.sh,
	* pocc-installer.sh,
	* polyopt/,
	* polyopt/AffineConverter.cpp,
	* polyopt/ClastToSage.cpp,
	* polyopt/Makefile.am,
	* polyopt/Makefile.in,
	* polyopt/PastToSage.cpp,
	* polyopt/PastToSageGeneric.cpp,
	* polyopt/PoCCOptimize.cpp,
	* polyopt/PolyDDV.cpp,
	* polyopt/PolyOpt.cpp,
	* polyopt/PolyOptDriver.cpp,
	* polyopt/PolyRoseOptions.cpp,
	* polyopt/PolyoptModule.cpp,
	* polyopt/SageNodeAnnotation.cpp,
	* polyopt/SageToPast.cpp,
	* polyopt/SageTools.cpp,
	* polyopt/ScopExtractor.cpp,
	* polyopt/ScopExtractorVisitor.cpp,
	* polyopt/ScopParser.cpp,
	* polyopt/include/,
	* polyopt/include/polyopt/,
	* polyopt/include/polyopt/AffineConverter.hpp,
	* polyopt/include/polyopt/ClastToSage.hpp,
	* polyopt/include/polyopt/PastToSage.hpp,
	* polyopt/include/polyopt/PastToSageGeneric.hpp,
	* polyopt/include/polyopt/PoCCOptimize.hpp,
	* polyopt/include/polyopt/PolyDDV.hpp,